--- a/apps/classroom/templates/classroom/list_classrooms.html
+++ b/apps/classroom/templates/classroom/list_classrooms.html
@@ -3,9 +3,10 @@
 {% block page_title %}List classrooms{% endblock %}
 
 {% block main_content %}
+<h1>Classrooms</h1>
 <ul>
 {% for classroom in classrooms %}
-<li>{{ classroom }}</li>
+<li><a href="{% url show_classroom classroom.pk %}">{{ classroom }}</a></li>
 {% endfor %}
 </ul>
 {% endblock %}
