--- a/apps/classroom/templates/classroom/show_classroom.html
+++ b/apps/classroom/templates/classroom/show_classroom.html
@@ -3,12 +3,13 @@
 {% block page_title %}{{ classroom }}{% endblock %}
 
 {% block main_content %}
+<h1>{{ classroom }}</h1>
 <dl>
 <dt>Title</dt>
 <dd>{{ classroom.title }}</dd>
-<dt>First day</dt>
-<dd>{{ classroom.first_day }}</dd>
 <dt>Instructor</dt>
 <dd>{{ classroom.instructor }}</dd>
+<dt>First day</dt>
+<dd>{{ classroom.first_day }}</dd>
 </dl>
 {% endblock %}
