Worked out static files

--- a/apps/classroom/templates/classroom/list_classrooms.html
+++ b/apps/classroom/templates/classroom/list_classrooms.html
@@ -1,8 +1,8 @@
 {% extends "website/layout.html" %}
 
-{% block page_title %}List classrooms{% endblock %}
+{% block meta_title %}List classrooms{% endblock %}
 
-{% block main_content %}
+{% block body %}
 <h1>Classrooms</h1>
 <ul>
 {% for classroom in classrooms %}
