--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -1,8 +1,8 @@
 {% extends "website/layout.html" %}
 
-{% block page_title %}Site index{% endblock %}
+{% block meta_title %}Site index{% endblock %}
 
-{% block main_content %}
+{% block body %}
 <h1>App list</h1>
 <ul>
 {% for app in apps %}
