--- a/apps/classroom/templates/classroom/edit_classroom.html
+++ b/apps/classroom/templates/classroom/edit_classroom.html
@@ -13,15 +13,21 @@
 {% endblock %}
 
 {% block main_content %}
-    <h2>Course Overview</h2>
-
-    <dl>
-        <dt>Instructor</dt><dd>{{ classroom.instructor }}</dd>
-        <dt>First day</dt><dd>{{ classroom.first_day }}</dd>
-    </dl>
-    
-    {{ classroom.overview|rst2html }}
-    
+    <form method="post" action="{% url post_classroom classroom.pk %}">
+        <dl>
+            <dt>Instructor</dt>
+            <dd>{{ classroom.instructor }}</dd>
+            <dt>First day</dt>
+            <dd>{{ classroom.first_day }}</dd>
+            <dt>Overview</dt>
+            <dd><textarea name="overview">{{ classroom.overview }}</textarea></dd>
+        </dl>
+        <p>
+            <input type="submit" name="submit" value="Submit">
+            <input type="submit" name="cancel" value="Cancel">
+        </p>
+        {% csrf_token %}
+    </form>
 {% endblock %}
 
 {% block side_content %}
