--- a/apps/classroom/static/classroom/main.css
+++ b/apps/classroom/static/classroom/main.css
@@ -23,20 +23,24 @@ dd {
     margin-bottom:1em;
 }
 textarea {
+    width:90%;
+}
+header input[type="text"] {
     width:100%;
+    text-align:center;
 }
 
 #main_content { 
     width:67%; 
     float:left; 
     margin-left:8px; 
+    border-right:1px solid blue;
 }
 #side_content { 
     width:25%; 
     float:left; 
     margin-right:8px;
     padding-left:1em;
-    border-left:1px solid blue;
 }
 
 #action_links {
