--- a/apps/classroom/templates/classroom/edit_classroom.html
+++ b/apps/classroom/templates/classroom/edit_classroom.html
@@ -4,16 +4,16 @@
 {% block meta_title %}{{ classroom }}{% endblock %}
 
 {% block head %}
-    <link rel="stylesheet" href="{{ STATIC_URL }}classroom/main.css" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}classroom/main.css">
 {% endblock %}
 
 {% block header %}
+    <form method="post" action="{% url post_classroom classroom.pk %}">
     <h1>{{ classroom.title }}</h1>
-    {% if classroom.subtitle %}<p>{{ classroom.subtitle }}</p>{% endif %}
+    <input type="text" name="subtitle" value="{{ classroom.subtitle }}">
 {% endblock %}
 
 {% block main_content %}
-    <form method="post" action="{% url post_classroom classroom.pk %}">
         <dl>
             <dt>Instructor</dt>
             <dd>{{ classroom.instructor }}</dd>
@@ -33,13 +33,18 @@
 {% block side_content %}
     <p id="login">
         {% if user.is_authenticated %}
-        Hi {% if user.first_name %}{{ user.first_name }}{% else %}there{% endif %}.&nbsp;&nbsp;<a href="{% url logout %}" tabindex=1>Logout?</a>
+        {% if user.first_name %}Hi {{ user.first_name }}.&nbsp;&nbsp;{% endif %}<a href="{% url logout %}" tabindex=1>Logout?</a>
         {% else %}
         <form method="post" action="{% url login %}">
-            <label for="pswd">Login:</label>
-            <input type="password" name="pswd" onLoad="this.focus()" tabindex=1 />
+            <label for="password">Login:</label>
+            <input type="password" name="password" tabindex=1 />
             {% csrf_token %}
         </form>
         {% endif %}
     </p>
+
+    <h3>Schedule</h3>
+    <h3>Links</h3>
+    
 {% endblock %}
+
