Prepping to add docs, schedule

--- a/apps/classroom/templates/classroom/show_classroom.html
+++ b/apps/classroom/templates/classroom/show_classroom.html
@@ -42,7 +42,11 @@
         {% endif %}
     </p>
 
-    <h3>Schedule</h3>
-    <h3>Links</h3>
+    <h3>Go to&hellip;</h3>
+    <ul>
+        <li><a href="">Schedule</a></li>
+        <li><a href="">Documents</a></li>
+    </ul>
+    
     
 {% endblock %}
