--- a/apps/classroom/templates/classroom/show_classroom.html
+++ b/apps/classroom/templates/classroom/show_classroom.html
@@ -15,7 +15,7 @@
 {% block main_content %}
     {% if user.is_staff %}
     <ul id="action_links" class="horizontal_list">
-        <li><a href="{% url edit_classroom classroom.pk %}">Edit</a></li>
+        <li><a href="{% url admin:classroom_classroom_change classroom.pk %}">Edit</a></li>
     </ul>
     {% endif %}
     
