--- a/apps/classroom/templates/classroom/show_schedule.html
+++ b/apps/classroom/templates/classroom/show_schedule.html
@@ -15,17 +15,20 @@
 {% block main_content %}
     {% if user.is_staff %}
     <ul id="action_links" class="horizontal_list">
-        <li><a href="{% url admin:classroom_classroom_change classroom.pk %}">Edit</a></li>
+        <li><a href="{% url admin:classroom_activityblock_changelist %}">Edit</a></li>
     </ul>
     {% endif %}
-    
-    <dl>
-        <dt>Instructor</dt><dd>{{ classroom.instructor }}</dd>
-        <dt>First day</dt><dd>{{ classroom.first_day }}</dd>
-    </dl>
-    
-    <h2>Course Overview</h2>
-    {{ classroom.overview|rst2html }}
+
+    <h2>Schedule</h2>
+    {% if classroom.schedule %}
+    <ul>
+    {% for block in classroom.schedule %}
+    <li>{{ block }}</li>
+    {% endfor %}
+    </ul>
+    {% else %}
+    <p>No activities have been scheduled.</p>
+    {% endif %}
     
 {% endblock %}
 
@@ -44,7 +47,7 @@
 
     <h3>Go to&hellip;</h3>
     <ul>
-        <li><a href="{% url show_schedule classroom.pk %}">Schedule</a></li>
+        <li><a href="{% url show_classroom classroom.pk %}">Overview</a></li>
         <li><a href="">Documents</a></li>
     </ul>
     
