--- a/apps/classroom/templates/classroom/show_schedule.html
+++ b/apps/classroom/templates/classroom/show_schedule.html
@@ -23,7 +23,15 @@
     {% if classroom.schedule %}
     <ul>
     {% for block in classroom.schedule %}
-    <li>{{ block }}</li>
+    <li>{{ block }}
+    {% if block.activities %}
+    <ul>
+    {% for activity in activities %}
+    <li>{{ activity }}</li>
+    {% endfor %}
+    </ul>
+    {% endif %}
+    </li>
     {% endfor %}
     </ul>
     {% else %}
@@ -35,7 +43,7 @@
 {% block side_content %}
     <p id="login">
         {% if user.is_authenticated %}
-        {% if user.first_name %}Hi {{ user.first_name }}.&nbsp;&nbsp;{% endif %}<a href="{% url logout %}" tabindex=1>Logout?</a>
+        {% if user.first_name %}Hi {{ user.first_name }}.&nbsp;&nbsp;{% endif %}<a href="{% url logout %}">Logout?</a>
         {% else %}
         <form method="post" action="{% url login %}">
             <label for="password">Login:</label>
