--- a/apps/classroom/templates/classroom/show_classroom.html
+++ b/apps/classroom/templates/classroom/show_classroom.html
@@ -3,7 +3,7 @@
 
 {% block main_content %}
     {% if user.is_staff %}
-    <ul class="action_links horizontal_list">
+    <ul class="action_links">
         <li><a href="{% url admin:classroom_classroom_change classroom.pk %}" target="_blank">Edit</a></li>
     </ul>
     {% endif %}
