--- a/apps/gradebook/templates/gradebook/list_assignments.html
+++ b/apps/gradebook/templates/gradebook/list_assignments.html
@@ -2,7 +2,7 @@
 
 {% block main_content %}
     {% if user.is_staff %}
-    <ul class="action_links horizontal_list">
+    <ul class="action_links">
         <li><a href="{% url admin:gradebook_assignment_changelist %}" target="_blank">Edit</a></li>
     </ul>
     {% endif %}
@@ -12,7 +12,7 @@
     {% if classroom.assignment_set.all %}
     <ul>
         {% for assignment in classroom.assignment_set.all %}
-        <li>{{ assignment }}</li>
+        <li><a href="{% url show_assignment classroom.pk assignment.pk %}">{{ assignment.label }}</a></li>
         {% endfor %}
     </ul>
     {% else %}
