--- a/apps/gradebook/templates/gradebook/show_assignment.html
+++ b/apps/gradebook/templates/gradebook/show_assignment.html
@@ -2,7 +2,7 @@
 
 {% block main_content %}
     {% if user.is_staff %}
-    <ul class="action_links horizontal_list">
+    <ul class="action_links">
         <li><a href="{% url admin:gradebook_assignment_change assignment.pk %}" target="_blank">Edit</a></li>
     </ul>
     {% endif %}
