--- a/apps/gradebook/templates/gradebook/edit_grades.html
+++ b/apps/gradebook/templates/gradebook/edit_grades.html
@@ -8,35 +8,33 @@
     {% endif %}
 
     {% if assignment %}
-    <form action="{% url input_grades classroom.pk %}" method="post">
+    <form action="{% url edit_grades classroom.pk %}" method="post">
         <p>
             <select name="assignment_pk" onChange="this.form.submit()">
                 {% for a in classroom.assignment_set.all %}
                 <option value="{{ a.pk }}"{% if a.pk == assignment.pk %} selected="selected"{% endif %}>{{ a.label }}</option>
                 {% endfor %}
             </select>
+            {% if assignment.due_date %}Due date:&nbsp;{{ assignment.due_date }}{% endif %}
             <noscript><input type="submit" value="Submit"></noscript>
             {% csrf_token %}
         </p>
     </form>
 
-    <p>Category weight = {{ assignment.category.weight }}
-    <br>Due date: {{ assignment.due_date }}</p>
-
     <form action="{% url post_grades classroom.pk assignment.pk %}" method="post">
         <p>
-        <table>
+        <table id="grade_edit_table">
             <tr>
                 <th>Max</th>
-                <td><input class="c" name="max_points" type="text" size=2 value="{{ assignment.max_points }}" tabindex="1" /></td>
+                <td><input class="c" name="max_points" type="text" size=2 value="{{ assignment.max_points }}" tabindex="1"></td>
             </tr>
             <tr>
                 <th>Curve</th>
-                <td><input class="c" name="curve_points" type="text" size=2 value="{{ assignment.curve_points }}" tabindex="1" /></td>
+                <td><input class="c" name="curve_points" type="text" size=2 value="{{ assignment.curve_points }}" tabindex="1"></td>
             </tr>
             <tr>
                 <th>Graded?</td>
-                <td><input name="is_graded" type="checkbox"{% if assignment.is_graded %} checked{% endif %} tabindex="1" /></td>
+                <td><input name="is_graded" type="checkbox"{% if assignment.is_graded %} checked{% endif %} tabindex="1"></td>
             </tr>
         </table>
         </p>
@@ -47,21 +45,18 @@
                 <th>Pts</th>
                 <th>Xtr</th>
                 <th>Ex?</th>
-                <th>Note</th>
             </tr>
-            {% for s in classroom.student_set.all %}
+            {% for grade in assignment.grades %}
             <tr>
-                <td class="l">{{ s.full_name }}</td>
-                <td><input class="c" name="earned_points_{{ s.pk }}" type="text" size=2 value="{{ s.grade.earned_points }}" tabindex="2" /></td>
-                <td><input class="c" name="extra_points_{{ s.pk }}" type="text" size=2 value="{{ s.grade.extra_points }}" tabindex="3" /></td>
-                <td><input name="is_excused_{{ s.pk }}" type="checkbox"{% if s.grade.is_excused %} checked{% endif %} tabindex="4" /></td>
-                <td><input name="note_{{ s.pk }}" type="text" size=50 value="{{ s.grade.note }}" tabindex="5" /></td>
+                <td class="l">{{ grade.student.full_name }}</td>
+                <td><input class="c" name="earned_points_{{ grade.student.pk }}" type="text" size=2 value="{{ grade.earned_points }}" tabindex="1"></td>
+                <td><input class="c" name="extra_points_{{ grade.student.pk }}" type="text" size=2 value="{{ grade.extra_points }}"></td>
+                <td><input name="is_excused_{{ grade.student.pk }}" type="checkbox"{% if grade.is_excused %} checked{% endif %}></td>
             </tr>
         {% endfor %}
         </table>
         </p>
-        <p><input name="submit_grades" type="submit" value="Submit" tabindex="3" /></p>
-        <input name="pk" type="hidden" value="{{ assignment.pk }}" />
+        <p><input name="submit_grades" type="submit" value="Submit" tabindex="3"></p>
         {% csrf_token %}
     </form>
     {% else %}
