--- a/apps/classroom/templates/classroom/list_students.html
+++ b/apps/classroom/templates/classroom/list_students.html
@@ -12,7 +12,7 @@
     {% if classroom.student_set.all %}
     <ul>
         {% for student in classroom.student_set.all %}
-        <li><a href="{% url show_student classroom.pk student.pk %}">{{ student.full_name }}</a></li>
+        <li>{{ student.full_name }}</li>
         {% endfor %}
     </ul>
     {% else %}
