Added study lectures

--- a/apps/docmaker/templates/docmaker/list_docmakers.html
+++ b/apps/docmaker/templates/docmaker/list_docmakers.html
@@ -15,7 +15,7 @@
         <li>{{ obj }}
             <ul>
                 {% for document in obj.documents %}
-                <li>{{ document }}</li>
+                <li><a href="{% url run_docmaker classroom.pk %}?doc={{ document }}&maker={{ docmaker.tag }}&id={{ obj.pk }}">{{ document }}</a></li>
                 {% endfor %}
             </ul>
         </li>
