Finally got ExerciseSet docmaker to build latex file

--- a/apps/classroom/templates/classroom/show_classroom.html
+++ b/apps/classroom/templates/classroom/show_classroom.html
@@ -1,5 +1,5 @@
 {% extends "classroom/root.html" %}
-{% load rst_tags %}
+{% load restructuredtext_tags %}
 
 {% block main_content %}
     {% if user.is_staff %}
