Docmaker mostly functional, still some clean up to do

--- a/apps/docmaker/templates/docmaker/list_docmakers.html
+++ b/apps/docmaker/templates/docmaker/list_docmakers.html
@@ -14,8 +14,8 @@
         {% for obj in docmaker.objects %}
         <li>{{ obj }}
             <ul>
-                {% for document in obj.documents %}
-                <li><a href="{% url build_document classroom.pk %}?doc={{ document }}&maker={{ docmaker.tag }}&id={{ obj.pk }}">{{ document }}</a></li>
+                {% for doctag, info in obj.docs.items %}
+                <li><a href="{% url build_document classroom.pk doctag obj.pk %}">{{ info.context.document_label|title }}</a></li>
                 {% endfor %}
             </ul>
         </li>
