Removed app list from site index

--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -3,10 +3,8 @@
 {% block meta_title %}Site index{% endblock %}
 
 {% block body %}
-<h1>App list</h1>
+<h1>Site index</h1>
 <ul>
-{% for app in apps %}
-<li><a href="{{ app }}/">{{ app }}</a></li>
-{% endfor %}
+<li><a href="classroom/">Classroom list</a></li>
 </ul>
 {% endblock %}
