Fixed quite a few errors in docmaker

--- a/apps/classroom/templates/classroom/list_documents.html
+++ b/apps/classroom/templates/classroom/list_documents.html
@@ -31,8 +31,8 @@
         <dt>
             {{ block }}{% if block.date %} ({{ block.date }}){% endif %}
         </dt>
-        {% if block.activities %}
-        {% for activity in block.activities.all %}
+        {% if block.activity_set.all %}
+        {% for activity in block.activity_set.all %}
         <dd>{{ activity.label }}
             {% if activity.documents %}
             <ul>
